--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="pref_camera_id_entry_front">Front</string>
 
     <!-- Settings screen, setting title text -->
-    <string name="pref_camera_recordlocation_title">Store location</string>
+    <string name="pref_camera_recordlocation_title">Store Location</string>
 
     <string name="pref_camera_recordlocation_default" translatable="false">none</string>
 
@@ -102,7 +102,7 @@
     <string name="pref_camera_recordlocation_entry_on">On</string>
 
     <!-- The Video quality settings in preference [CHAR LIMIT=21] -->
-    <string name="pref_video_quality_title">Video quality</string>
+    <string name="pref_video_quality_title">Video Quality</string>
     <!-- The default quality value is 5 (720p) -->
     <string name="pref_video_quality_default" translatable="false">5</string>
     <!-- Video quality setting entry. Videos will be recorded in 1080p quality. [CHAR LIMIT=24] -->
@@ -114,7 +114,7 @@
 
     <!-- Describes the preference dialog for choosing interval between frame capture for
     time lapse recording. Appears at top of the dialog. [CHAR LIMIT=30] -->
-    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
+    <string name="pref_video_time_lapse_frame_interval_title">Time Lapse</string>
     <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
     <!-- The time interval between frame capture for time lapse recording -->
     <string name="pref_video_time_lapse_frame_interval_entry_1000" translatable="false">1s</string>
@@ -132,11 +132,11 @@
     <string name="pref_camcorder_settings_category">Camcorder settings</string>
 
     <!-- More Settings screen, power button title -->
-    <string name="pref_camera_power_shutter_title">Power shutter</string>
+    <string name="pref_camera_power_shutter_title">Power Shutter</string>
     <string name="pref_camera_power_shutter_default">off</string>
 
     <!-- Settings screen, Picture size title -->
-    <string name="pref_camera_picturesize_title">Picture size</string>
+    <string name="pref_camera_picturesize_title">Size</string>
 
     <!-- Settings screen, Picture size dialog radio button choices -->
     <string name="pref_camera_picturesize_entry_4000x3000">12MP</string>
@@ -166,7 +166,7 @@
     <string name="pref_camera_picturesize_entry_176x144">QCIF</string>
 
     <!-- Settings screen, Focus mode title -->
-    <string name="pref_camera_focusmode_title">Focus mode</string>
+    <string name="pref_camera_focusmode_title">Focus</string>
 
     <!-- Settings screen, Focus mode dialog radio button choices -->
     <string name="pref_camera_focusmode_entry_auto">Auto</string>
@@ -176,21 +176,35 @@
     <string name="pref_camera_focusmode_entry_facedetect">Face detect</string>
     <string name="pref_camera_focusmode_entry_continuouspicture">Continuous Picture</string>
 
+
+    <!-- Settings screen, Video Stabilization -->
+    <string name="pref_camera_stabilization_title">Stabilization</string>
+    <string name="pref_camera_stabilization_default" translatable="false">off</string>
+
+    <!-- Settings screen, storage title -->
+    <string name="pref_camera_storage_title">Storage</string>
+
+    <!-- Settings screen, JPEG -->
+    <string name="pref_camera_jpeg_title">JPEG</string>
+    <string name="pref_camera_jpeg_default" translatable="false">90</string>
+
+    <!-- Settings screen, JPEG dialog radio button choices -->
+    <string name="pref_camera_jpeg_entry_super">Super</string>
+    <string name="pref_camera_jpeg_entry_high">High</string>
+    <string name="pref_camera_jpeg_entry_medium">Medium</string>
+    <string name="pref_camera_jpeg_entry_low">Low</string>
+
+
     <!-- Settings screen, ISO -->
     <string name="pref_camera_iso_title">ISO</string>
     <string name="pref_camera_iso_default" translatable="false">auto</string>
 
     <!-- Settings screen, ISO dialog radio button choices -->
     <string name="pref_camera_iso_entry_auto">Auto</string>
-    <string name="pref_camera_iso_entry_isodeblur">Auto (HJR)</string>
-    <string name="pref_camera_iso_entry_iso1600">1600</string>
-    <string name="pref_camera_iso_entry_iso1200">1200</string>
-    <string name="pref_camera_iso_entry_iso1000">1000</string>
     <string name="pref_camera_iso_entry_iso800">800</string>
     <string name="pref_camera_iso_entry_iso400">400</string>
     <string name="pref_camera_iso_entry_iso200">200</string>
     <string name="pref_camera_iso_entry_iso100">100</string>
-    <string name="pref_camera_iso_entry_iso50">50</string>
 
     <!-- Settings screen, Timer mode title -->
     <string name="pref_camera_timer_title">Timer mode</string>
@@ -215,15 +229,7 @@
     <string name="pref_camera_burst_entry_15">15 shots</string>
     <string name="pref_camera_burst_entry_20">20 shots</string>
 
-    <!-- Settings screen, JPEG -->
-    <string name="pref_camera_jpeg_title">JPEG</string>
-    <string name="pref_camera_jpeg_default" translatable="false">90</string>
 
-    <!-- Settings screen, JPEG dialog radio button choices -->
-    <string name="pref_camera_jpeg_entry_super">Super</string>
-    <string name="pref_camera_jpeg_entry_high">High</string>
-    <string name="pref_camera_jpeg_entry_medium">Medium</string>
-    <string name="pref_camera_jpeg_entry_low">Low</string>
 
     <!-- Default flash mode setting.-->
     <string name="pref_camera_flashmode_default" translatable="false">auto</string>
@@ -232,7 +238,7 @@
     <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
 
     <!-- Settings screen, Flash mode title -->
-    <string name="pref_camera_flashmode_title">Flash mode</string>
+    <string name="pref_camera_flashmode_title">Flash Mode</string>
 
     <!-- Settings screen, Flash mode dialog radio button choices -->
     <string name="pref_camera_flashmode_entry_auto">Auto</string>
@@ -246,7 +252,7 @@
     <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
 
     <!-- Settings screen, white balance title -->
-    <string name="pref_camera_whitebalance_title">White balance</string>
+    <string name="pref_camera_whitebalance_title">White Balance</string>
 
     <!-- Settings screen, White balance dialog radio button choices -->
     <string name="pref_camera_whitebalance_entry_auto">Auto</string>
@@ -260,7 +266,7 @@
     <string name="pref_camera_scenemode_default" translatable="false">auto</string>
 
     <!-- Settings screen, Select Scene mode -->
-    <string name="pref_camera_scenemode_title">Scene mode</string>
+    <string name="pref_camera_scenemode_title">Scene Mode</string>
 
     <!-- Settings menu, scene mode choices -->
     <string name="pref_camera_scenemode_entry_auto">Auto</string>
@@ -427,26 +433,26 @@
     <!-- Default auto exposure setting. Do not translate. -->
     <string name="pref_camera_autoexposure_default">center</string>
     <!-- Settings screen, Select auto exposure title -->
-    <string name="pref_camera_autoexposure_title">Auto exposure mode</string>
+    <string name="pref_camera_autoexposure_title">Exposure</string>
 
     <!-- Settings screen, auto exposure dialog radio button choices -->
-    <string name="pref_camera_autoexposure_entry_frameaverage">Frame average</string>
-    <string name="pref_camera_autoexposure_entry_centerweighted">Center weighted</string>
-    <string name="pref_camera_autoexposure_entry_spotmetering">Spot metering</string>
+    <string name="pref_camera_autoexposure_entry_frameaverage">Frame Average</string>
+    <string name="pref_camera_autoexposure_entry_centerweighted">Center Weighted</string>
+    <string name="pref_camera_autoexposure_entry_spotmetering">Spot Metering</string>
     <string name="pref_camera_autoexposure_entry_matrix">Matrix</string>
 
     <!-- Default redeye reduction setting. -->
     <string name="pref_camera_redeyereduction_default" translatable="false">disable</string>
 
     <!-- Settings screen, Select Redeye Reduction -->
-    <string name="pref_camera_redeyereduction_title">Redeye reduction</string>
+    <string name="pref_camera_redeyereduction_title">Red-Eye Reduction</string>
 
     <!-- Settings menu, redeye reduction choices -->
     <string name="pref_camera_redeyereduction_entry_enable">Enable</string>
     <string name="pref_camera_redeyereduction_entry_disable">Disable</string>
 
     <!-- Settings screen, Anti Banding title -->
-    <string name="pref_camera_antibanding_title">Anti-banding</string>
+    <string name="pref_camera_antibanding_title">Anti-Banding</string>
 
     <!-- Default Anti Banding setting. -->
     <string name="pref_camera_antibanding_default">auto</string>
@@ -458,7 +464,7 @@
     <string name="pref_camera_antibanding_entry_3">Auto</string>
 
     <!-- Settings screen, Select Color effect title -->
-    <string name="pref_camera_coloreffect_title">Color effect</string>
+    <string name="pref_camera_coloreffect_title">Effect</string>
 
     <!-- Default color effect setting. -->
     <string name="pref_camera_coloreffect_default" translatable="false">none</string>
@@ -495,7 +501,7 @@
     <string name="pref_camera_scenemode_entry_ar">AR</string>
 
     <!-- Other settings -->
-    <string name="pref_camera_focus_title">Touch focus duration</string>
+    <string name="pref_camera_focus_title">Focus Duration</string>
     <string name="pref_camera_focus_summary">Select duration for touch focus</string>
     <string name="pref_camera_focus_default" translatable="false">15</string>
 
